--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,18 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
+    android:saveEnabled="false"
     tools:context=".MainActivity"
     tools:openDrawer="start">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
-
+        android:layout_height="match_parent"
+        android:saveEnabled="false">
 
         <com.google.android.material.appbar.AppBarLayout
             android:id="@+id/ab_appbar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:saveEnabled="false"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -26,11 +28,11 @@
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 android:background="@color/blue_200"
+                android:saveEnabled="false"
+                app:navigationIcon="@null"
                 app:title="@string/app_name"
                 app:titleCentered="true"
-                app:titleTextColor="@color/teal_200"
-                app:navigationIcon="@null"
-                />
+                app:titleTextColor="@color/teal_200" />
         </com.google.android.material.appbar.AppBarLayout>
 
         <androidx.fragment.app.FragmentContainerView
@@ -38,6 +40,7 @@
             android:name="androidx.navigation.fragment.NavHostFragment"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:saveEnabled="false"
             app:defaultNavHost="true"
             app:layout_constraintBottom_toTopOf="@+id/bnv_menu_bottom"
             app:layout_constraintEnd_toEndOf="parent"
@@ -51,6 +54,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/blue_200"
+            android:saveEnabled="false"
             android:textAlignment="center"
             android:visibility="visible"
             app:itemIconTint="@color/teal_200"
@@ -67,6 +71,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_gravity="start"
+        android:saveEnabled="false"
         app:headerLayout="@layout/menu_header"
         app:itemTextColor="@color/blue_200"
         app:menu="@menu/drawer_menu">
