--- a/app/src/main/res/navigation/nav_jokenpo.xml
+++ b/app/src/main/res/navigation/nav_jokenpo.xml
@@ -13,7 +13,9 @@
         tools:layout="@layout/fragment_start">
         <action
             android:id="@+id/action_startFragment_to_game_nav"
-            app:destination="@id/game_nav" />
+            app:destination="@id/game_nav"
+            app:popUpTo="@+id/startFragment"
+            app:popUpToSaveState="true" />
     </fragment>
     <navigation
         android:id="@+id/game_nav"
@@ -28,5 +30,8 @@
             android:name="com.dgm.jokenpoApp.fragments.ResultFragment"
             android:label="Jokenpô"
             tools:layout="@layout/fragment_result" />
+        <action
+            android:id="@+id/action_global_startFragment"
+            app:destination="@id/startFragment" />
     </navigation>
 </navigation>
